2006-11-30  Christopher Faylor  <cgf@timesys.com>

	* tk/win/tcl.m4 (LIB_AC_PROG_CC): Upgrade to avoid use of obsolete
	ac_cv_cygwin variable.
	* tk/win/configure: Regenerate.

2006-07-13  Steve Ellcey  <sje@cup.hp.com>

	* configure.in: Fix for autoconf 2.5.
	* unix/tcl.m4: Fix for autoconf 2.5.
	* configure: Regenerate.
	* unix/configure: Regenerate.
	* win/configure: Regenerate.

2006-02-08  Alexandre Oliva  <aoliva@redhat.com>

	* unix/tcl.m4 (SC_CONFIG_CFLAGS, SC_BLOCKING_STYLE): Remove
	unmatched single quote inside backticks.
	* unix/configure: Rebuild.

2003-10-15  Ben Elliston  <bje@wasabisystems.com>

	* win/tcl.m4 (SC_PROG_TCLSH): Replace with version from tcl/win.
	* win/configure: Regenerate.

2003-02-07  Martin M. Hunt  <hunt@redhat.com>

	* win/tcl.m4 (SC_CONFIG_CFLAGS): Don't default to -O.
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Don't default to -O.	
	CFLAGS gets set to "-O2" by default in top level
	configure. Adding "-O" here causes the "-O2" to be
	ignored, but only when the user types "make" within
	the tcl subdirectory. This caused some confusion.
	* win/configure: Rebuilt.
	* unix/configure: Rebuilt.


2002-10-22  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4.1 TAGGED FOR RELEASE ***

	* changes: updated for 8.4.1 release

2002-10-21  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/README: revised according to Jim's suggestions
	* macosx/tkMacOSXAppInit.c: use standard PATH_MAX from <limits.h>
	
2002-10-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/winMain.c (WinMain, main): remove obsolete SetMessageQueue call

	* win/configure: Regen. 
	* win/tcl.m4 (SC_CONFIG_CFLAGS): Check for bug in Cygwin version
	of windres and work around that case by passing a POSIX path
	instead of a Windows native path. One can't always pass a POSIX
	path because the mingw native toolchain accepts only Windows
	native paths. (dejong)

	* win/tkWinPort.h: define OPEN_MAX only if not defined.
	[Patch #625472] (howell)
